kubernetes/hejtado-config-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hejtado-config-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hejtado-config.pine1.home
    http:
      paths:
      - path: /
        backend:
          serviceName: hejtado-config-service
          servicePort: 80
